# genesis

fl-core/: README.md  pyproject.toml  tree.txt
fl-core/configs/: data_config.yaml  federated_config.yaml  model_config.yaml
fl-core/data/processed/: test.csv
fl-core/logs/advanced_training/: log_20250712_215153.txt
fl-core/logs/client_0/: log_20250705_191726.txt
fl-core/logs/client_1/: log_20250705_191727.txt
fl-core/logs/client_2/: log_20250705_191729.txt
fl-core/logs/client_3/: log_20250705_191730.txt
fl-core/logs/client_4/: log_20250705_191731.txt
fl-core/logs/client_5/: log_20250705_191731.txt
fl-core/logs/client_6/: log_20250705_191732.txt
fl-core/logs/client_7/: log_20250705_191733.txt
fl-core/logs/client_8/: log_20250705_191734.txt
fl-core/logs/client_9/: log_20250705_191735.txt
fl-core/logs/data/: log_20250705_183639.txt
fl-core/logs/server/: log_20250705_191717.txt
fl-core/models/global_models/: alt_word2vec.model  ref_word2vec.model
fl-core/notebooks/: baseline.ipynb  eda.ipynb  model.ipynb
fl-core/results/advanced_training/: final_results.yaml  training_history.csv
fl-core/scripts/: evaluate_best_kfold_model.py  run_federated_clients.sh  run_improved_training.py  test_improved_model.py  test_kfold_cv.py
fl-core/src/data/: create_federated_dataset.py
fl-core/tests/: analyze_global_metrics.py  debug_config.py  test_centralized_evaluation.py  test_client_sampling.py  test_fedprox.py  test_lr_scheduling.py  test_sampling_fix.py  test_weighted_average.py  test_weighted_avg.py  validate_client_sampling.py
(+161 files in other folders)
