[project]
name = "clinvar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flwr>=1.19.0",
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.0",
    "pydantic>=2.11.7",
]
